--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -73,8 +73,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install akshare --pre --force-reinstall
-          pip install baostock
+          pip install akshare baostock
 
       - name: Debug info
         run: |
@@ -125,8 +124,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install akshare --pre --force-reinstall
-          pip install baostock
+          pip install akshare baostock
 
       - name: Debug info
         run: |
@@ -179,8 +177,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install akshare --pre --force-reinstall
-          pip install baostock
+          pip install akshare baostock
 
       - name: Debug info
         run: |
@@ -232,8 +229,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install akshare --pre --force-reinstall
-          pip install baostock
+          pip install akshare baostock
 
       - name: Debug info
         run: |
@@ -284,8 +280,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install akshare --pre --force-reinstall
-          pip install baostock
+          pip install akshare baostock
 
       - name: Debug info
         run: |
@@ -352,8 +347,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install akshare --pre --force-reinstall
-          pip install baostock
+          pip install akshare baostock
 
       - name: Debug info
         run: |
@@ -404,8 +398,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install akshare --pre --force-reinstall
-          pip install baostock
+          pip install akshare baostock
 
       - name: Debug info
         run: |
@@ -455,8 +448,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install akshare --pre --force-reinstall
-          pip install baostock
+          pip install akshare baostock
 
       - name: Check if non-trading hours
         id: check_hours
