--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -46,8 +46,68 @@ on:
           - 'crawl_daily'				#【T15】手动爬取日线数据
           - 'cleanup'					#【T16】手动清理旧数据
           - 'resume_crawl'				#【T17】手动断点续爬
+          - 'test_crawl_small_pool'		#【T18】手动测试爬取小股票池日线数据（仅2只ETF）
+  
 
 jobs:
+  # 新增：测试任务 - 爬取小股票池日线数据（仅2只ETF）
+  test_crawl_small_pool:
+    if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.task == 'test_crawl_small_pool' }}
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      id-token: write
+      pull-requests: write
+      
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          ref: main
+          fetch-depth: 0
+          clean: true
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+          
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install akshare baostock
+
+      - name: Debug info
+        run: |
+          echo "Event name: ${{ github.event_name }}"
+          echo "Input task: ${{ github.event.inputs.task }}"
+          echo "Small pool file: $SMALL_POOL_FILE"
+      
+      - name: Run strategy
+        env:
+          TASK: 'test_crawl_small_pool'
+          WECOM_WEBHOOK: ${{ secrets.WECOM_WEBHOOK }}
+          SMALL_POOL_FILE: 'data/stock_pool/karmy_etf_list.csv'
+        run: |
+          # 执行主程序
+          echo "当前北京时间: $(date -u -d "+8 hours" '+%Y-%m-%d %H:%M')"
+          echo "正在测试爬取小股票池日线数据（仅2只ETF）..."
+          python main.py
+          
+          # 提交数据变更到仓库
+          git config user.name "GitHub Actions"
+          git config user.email "actions@github.com"
+          git add data/
+          git commit -m "手动测试：爬取小股票池日线数据 $(date +'%Y-%m-%d %H:%M')" || echo "没有数据变更"
+          git push origin main || echo "Failed to push changes"
+
+      - name: Verify execution
+        run: |
+          echo "小股票池日线数据爬取测试完成!"
+          echo "现在您可以检查 data/raw/ 目录下是否成功生成了2只ETF的数据文件"
+          
   # 通用测试任务处理程序
   run_test_tasks:
     if: ${{ github.event_name == 'workflow_dispatch' }}
