--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -96,6 +96,15 @@ jobs:
           echo "正在测试爬取小股票池日线数据（仅2只ETF）..."
           python main.py
           
+          # 关键修复：将文件从错误位置移动到正确位置
+          echo "修复数据文件路径..."
+          if [ -d "/home/runner/work/etf-strategy/data" ]; then
+            # 将文件从错误位置移动到工作目录
+            mkdir -p data
+            mv -f /home/runner/work/etf-strategy/data/* data/ 2>/dev/null || echo "没有需要移动的数据文件"
+            echo "已移动数据文件到正确位置"
+          fi
+          
           # 提交数据变更到仓库
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
@@ -106,12 +115,7 @@ jobs:
 
           echo "添加数据文件..."
           
-          # 仅当 data 目录存在时才添加
-          if [ -d "data" ]; then
-            git add data/
-          else
-            echo "data/ 目录不存在，跳过添加"
-          fi
+          git add data/
           
           echo "检查暂存区内容..."
           git status
@@ -175,6 +179,15 @@ jobs:
           echo "当前北京时间: $(date -u -d "+8 hours" '+%Y-%m-%d %H:%M')"
           python main.py
           
+          # 关键修复：将文件从错误位置移动到正确位置
+          echo "修复数据文件路径..."
+          if [ -d "/home/runner/work/etf-strategy/data" ]; then
+            # 将文件从错误位置移动到工作目录
+            mkdir -p data
+            mv -f /home/runner/work/etf-strategy/data/* data/ 2>/dev/null || echo "没有需要移动的数据文件"
+            echo "已移动数据文件到正确位置"
+          fi
+          
           # 提交数据变更到仓库
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
@@ -231,6 +244,15 @@ jobs:
           echo "当前北京时间: $(date -u -d "+8 hours" '+%Y-%m-%d %H:%M')"
           python main.py
           
+          # 关键修复：将文件从错误位置移动到正确位置
+          echo "修复数据文件路径..."
+          if [ -d "/home/runner/work/etf-strategy/data" ]; then
+            # 将文件从错误位置移动到工作目录
+            mkdir -p data
+            mv -f /home/runner/work/etf-strategy/data/* data/ 2>/dev/null || echo "没有需要移动的数据文件"
+            echo "已移动数据文件到正确位置"
+          fi
+          
           # 提交数据变更到仓库
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
@@ -286,6 +308,15 @@ jobs:
           echo "当前北京时间: $(date -u -d "+8 hours" '+%Y-%m-%d %H:%M')"
           python main.py
           
+          # 关键修复：将文件从错误位置移动到正确位置
+          echo "修复数据文件路径..."
+          if [ -d "/home/runner/work/etf-strategy/data" ]; then
+            # 将文件从错误位置移动到工作目录
+            mkdir -p data
+            mv -f /home/runner/work/etf-strategy/data/* data/ 2>/dev/null || echo "没有需要移动的数据文件"
+            echo "已移动数据文件到正确位置"
+          fi
+          
           # 提交数据变更到仓库
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
@@ -339,6 +370,15 @@ jobs:
           # 执行主程序
           echo "当前北京时间: $(date -u -d "+8 hours" '+%Y-%m-%d %H:%M')"
           python main.py
+          
+          # 关键修复：将文件从错误位置移动到正确位置
+          echo "修复数据文件路径..."
+          if [ -d "/home/runner/work/etf-strategy/data" ]; then
+            # 将文件从错误位置移动到工作目录
+            mkdir -p data
+            mv -f /home/runner/work/etf-strategy/data/* data/ 2>/dev/null || echo "没有需要移动的数据文件"
+            echo "已移动数据文件到正确位置"
+          fi
           
           # 提交数据变更到仓库
           git config user.name "GitHub Actions"
@@ -395,6 +435,15 @@ jobs:
           echo "当前北京时间: $(date -u -d "+8 hours" '+%Y-%m-%d %H:%M')"
           python main.py
           
+          # 关键修复：将文件从错误位置移动到正确位置
+          echo "修复数据文件路径..."
+          if [ -d "/home/runner/work/etf-strategy/data" ]; then
+            # 将文件从错误位置移动到工作目录
+            mkdir -p data
+            mv -f /home/runner/work/etf-strategy/data/* data/ 2>/dev/null || echo "没有需要移动的数据文件"
+            echo "已移动数据文件到正确位置"
+          fi
+          
           # 提交数据变更到仓库
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
@@ -410,6 +459,15 @@ jobs:
           # 执行主程序
           echo "当前北京时间: $(date -u -d "+8 hours" '+%Y-%m-%d %H:%M')"
           python main.py
+          
+          # 关键修复：将文件从错误位置移动到正确位置
+          echo "修复数据文件路径..."
+          if [ -d "/home/runner/work/etf-strategy/data" ]; then
+            # 将文件从错误位置移动到工作目录
+            mkdir -p data
+            mv -f /home/runner/work/etf-strategy/data/* data/ 2>/dev/null || echo "没有需要移动的数据文件"
+            echo "已移动数据文件到正确位置"
+          fi
           
           # 提交数据变更到仓库
           git config user.name "GitHub Actions"
@@ -465,6 +523,15 @@ jobs:
           echo "当前北京时间: $(date -u -d "+8 hours" '+%Y-%m-%d %H:%M')"
           python main.py
           
+          # 关键修复：将文件从错误位置移动到正确位置
+          echo "修复数据文件路径..."
+          if [ -d "/home/runner/work/etf-strategy/data" ]; then
+            # 将文件从错误位置移动到工作目录
+            mkdir -p data
+            mv -f /home/runner/work/etf-strategy/data/* data/ 2>/dev/null || echo "没有需要移动的数据文件"
+            echo "已移动数据文件到正确位置"
+          fi
+          
           # 提交数据变更到仓库
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
@@ -517,6 +584,15 @@ jobs:
           # 执行主程序
           echo "当前北京时间: $(date -u -d "+8 hours" '+%Y-%m-%d %H:%M')"
           python main.py
+          
+          # 关键修复：将文件从错误位置移动到正确位置
+          echo "修复数据文件路径..."
+          if [ -d "/home/runner/work/etf-strategy/data" ]; then
+            # 将文件从错误位置移动到工作目录
+            mkdir -p data
+            mv -f /home/runner/work/etf-strategy/data/* data/ 2>/dev/null || echo "没有需要移动的数据文件"
+            echo "已移动数据文件到正确位置"
+          fi
           
           # 提交数据变更到仓库
           git config user.name "GitHub Actions"
@@ -583,6 +659,15 @@ jobs:
         run: |
           echo "当前北京时间: $(date -u -d "+8 hours" '+%Y-%m-%d %H:%M')"
           python main.py
+          
+          # 关键修复：将文件从错误位置移动到正确位置
+          echo "修复数据文件路径..."
+          if [ -d "/home/runner/work/etf-strategy/data" ]; then
+            # 将文件从错误位置移动到工作目录
+            mkdir -p data
+            mv -f /home/runner/work/etf-strategy/data/* data/ 2>/dev/null || echo "没有需要移动的数据文件"
+            echo "已移动数据文件到正确位置"
+          fi
           
           # 提交数据变更到仓库
           git config user.name "GitHub Actions"
